--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "pinyin-filter": "^0.8.3",
     "vue": "^2.6.10"
   },
   "devDependencies": {
